Fixed global forced overflow-y: scroll

--- a/src/styles.global.scss
+++ b/src/styles.global.scss
@@ -9,6 +9,9 @@ html {
    font-style: normal;
    font-weight: 300;
    color: #C4C3C7;
+}
+
+body {
    overflow-y: scroll;
 }
 
